[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.metadata]
clippy-pedantic = true

[dependencies]
itertools = "0.13.0"
memoize = "0.4.2"
pathfinding = "4.12.0"
petgraph = "0.6.5"
rand = "0.8.5"
regex = "1.10.3"
strum = "0.26.3"
strum_macros = "0.26.4"
